--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <li><a href="#about">About</a></li>
       </ul>
       <br><br>
-      <p>"Do something important in life. I convert green grass to code."<br>- Mr Camel</p>
+      <p>"Devops is important."<br>- Mr Camel</p>
     </aside>
     <main class="content">
       <h2>About Me</h2>
